power: Don't crash when setting the dim timeout when using NX

We're querying a timer that doesn't exist, plus we're not even catching the X
error. Fix both.

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=661000